[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/Fonts/DisposableDroidBB.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://src/UI/Pause Menu.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 25
font_data = ExtResource( 1 )

[node name="Pause Menu" type="Popup"]
pause_mode = 2
anchor_top = 0.022
anchor_bottom = 0.022
margin_left = -1.0
margin_top = 0.0399997
margin_right = 323.0
margin_bottom = 177.04
popup_exclusive = true
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Label" parent="."]
anchor_left = 0.477
anchor_top = 1.169
anchor_right = 0.477
anchor_bottom = 1.169
margin_left = -78.4257
margin_top = -174.26
margin_right = 82.5743
margin_bottom = -142.26
custom_fonts/font = SubResource( 1 )
text = "RESUME"
align = 1

[node name="Button2" type="Label" parent="."]
anchor_left = 0.477
anchor_top = 1.224
anchor_right = 0.477
anchor_bottom = 1.224
margin_left = -78.4257
margin_top = -149.18
margin_right = 82.5743
margin_bottom = -117.18
custom_fonts/font = SubResource( 1 )
text = "FULLSCREEN"
align = 1

[node name="Button3" type="Label" parent="."]
anchor_left = 0.477
anchor_top = 1.18
anchor_right = 0.477
anchor_bottom = 1.18
margin_left = -78.4257
margin_top = -109.844
margin_right = 82.5743
margin_bottom = -77.8442
custom_fonts/font = SubResource( 1 )
text = "BACK TO MENU"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
self_modulate = Color( 1, 1, 1, 0.411765 )
show_behind_parent = true
anchor_left = 0.003
anchor_right = 1.0
anchor_bottom = 1.103
margin_left = -3.954
margin_top = -5.0
margin_right = 1.0
margin_bottom = 13.138
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
wait_time = 0.15
one_shot = true

[node name="Camera2D" type="Camera2D" parent="."]
limit_left = 0
limit_top = 0
limit_right = 320
limit_bottom = 180
limit_smoothed = true
smoothing_enabled = true
editor_draw_limits = true
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
